--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   },
   "dependencies": {
     "@metamask/providers": "^10.2.1",
+    "@openzeppelin/contracts": "^4.9.0",
     "next": "^13.1.1",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "scripts": {
